[metadata]
name = SequencingSolver
version = 1.0.1
author = Nima Mahmoodian
author_email = s.nima.mahmoodian@gmail.com
description = Package for solving various sequencing problems
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/esNIMA/SequencingSolver
project_urls =
    Bug Tracker = https://github.com/esNIMA/SequencingSolver/issues
    repository = https://github.com/esNIMA/SequencingSolver
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src